3.0.8:
  Add DOCKER_URL, MONGO_URL, MONGO_DB env variable in override
3.0.7:
  set logging only if necessary
3.0.6:
  Fix configparser import for python 2 vs 3
3.0.5:
  Add config override with env variables
3.0.4:
  Code cleanup
3.0.3:
  Put index management in core
3.0.2:
  Add missing deps
3.0.1:
  Add README etc..
3.0.0:
  separation of biomaj and biomaj_core